<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultScreenActivity">

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Parabéns, Vitor!" />

    <TextView
        android:id="@+id/result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_result_score"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_name" />

    <TextView
        android:id="@+id/player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="?attr/colorPrimary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_label"
        tools:text="9.84" />

    <TextView
        android:id="@+id/summary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/label_summary_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_score" />

    <TextView
        android:id="@+id/q1_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_q1"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/q1_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary_title" />

    <TextView
        android:id="@+id/q1_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/q1_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/label_correct_answer"
        tools:textColor="@color/green" />

    <TextView
        android:id="@+id/q2_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_q2"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/q2_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/q1_text" />

    <TextView
        android:id="@+id/q2_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/q2_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/label_incorrect_answer"
        tools:textColor="@color/red" />

    <TextView
        android:id="@+id/q3_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_q3"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/q3_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/q2_text" />

    <TextView
        android:id="@+id/q3_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/q3_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/label_correct_answer"
        tools:textColor="@color/green" />

    <TextView
        android:id="@+id/q4_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_q4"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/q4_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/q3_text" />

    <TextView
        android:id="@+id/q4_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/q4_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/label_correct_answer"
        tools:textColor="@color/green" />

    <TextView
        android:id="@+id/q5_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_q5"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/q5_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/q4_text" />

    <TextView
        android:id="@+id/q5_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/q5_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/label_incorrect_answer"
        tools:textColor="@color/red" />


    <Button
        android:id="@+id/play_again_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="redirectToMain"
        android:text="@string/button_play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>